deployment-neo4j.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: neo4j
  labels:
    app: neo4j
spec:
  replicas: 1
  selector:
    matchLabels:
      app: neo4j
  template:
    metadata:
      labels:
        app: neo4j
    spec:
      containers:
        - name: neo4j
          image: neo4j:latest
          ports:
            - containerPort: 7474
            - containerPort: 7687
          resources:
            limits:
              memory: "3Gi"
